# sprockets.http

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  examples.py  pyproject.toml  requirements-2.6.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: deploy.yaml  testing.yaml
docs/: api.rst  conf.py  contributing.rst  custom.css  history.rst  index.rst  requirements.txt
docs/_static/: custom.css
requires/: development.txt  installation.txt  testing.txt
sprockets/http/: __init__.py  app.py  mixins.py  runner.py  testing.py
